Remove wrong JDK17 info, add hot-swap instructions